# evi-native

./: CMakeLists.txt  README.md
app/src/main/cpp/: main.cpp  skia_renderer.cpp  ts_runtime.cpp
app/src/main/cpp/include/: skia_renderer.h  ts_runtime.h
app/src/main/java/com/cobyzero/app/: MainActivity.java
ts/: app.ts
